# lite_llm

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  curls_for_test.txt  docker-compose.yml  init.sql  main.py  pyproject.toml
keyservice/: =0.29.0  Dockerfile  app.py  pyproject.toml  pytest.ini  requirements.txt
keyservice/project/keygen/: config.py  container.py  locustfile.py  logger.py  main.py  settings.py
keyservice/project/keygen/api/: app.py
keyservice/project/keygen/api/v1/routers/: keygen.py
keyservice/project/keygen/api/v1/routes/: keys.py
keyservice/project/keygen/api/v1/schemas/: schema.py
keyservice/project/keygen/db/: engine.py  model_base.py  orm_models.py  session.py
keyservice/project/keygen/integrations/: litellm.py
keyservice/project/keygen/models/: keys.py  teams.py  users.py
keyservice/project/keygen/repositories/: keys.py  team.py  users.py
keyservice/project/keygen/schemas/: keys.py  teams.py  users.py
keyservice/project/keygen/services/: keygen.py  litellm.py
keyservice/project/keygen/tests/: conftest.py  enpoints.py  newconftest.py
keyservice/project/keygen/tests/repositories/: test_key_repo.py  test_user_repo.py
keyservice/project/keygen/utils/: exceptions.py  logger.py
