[project]
name = "litellm-grok"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "asgiref~=3.8.1",
    "asyncpg>=0.30.0",
    "fastapi~=0.115.0",
    "httpx~=0.27.0",
    "psycopg2-binary~=2.9.9",
    "pydantic~=2.9.2",
    "pydantic-settings~=2.5.2",
    "sqlalchemy~=2.0.35",
    "uvicorn~=0.30.6",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.10",
    "testcontainers>=4.12.0",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.flake8-builtins]
builtins-allowed-modules = ["id"]

[tool.ruff.lint.flake8-copyright]
author = "Ruff"

[tool.ruff.lint]
ignore = ["E712"]  # Отключает E712 глобально
