[project]
name = "keyservice"
version = "0.1.0"
description = "Service for getting API keys from LiteLLM"
authors = [
    {name = "baldruev",email = "malent@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "fastapi (>=0.115.0,<0.116.0)",
    "uvicorn (>=0.30.6,<0.31.0)",
    "sqlalchemy (>=2.0.35,<2.1.0)",
    "psycopg2-binary (>=2.9.9,<2.10.0)",
    "pydantic (>=2.9.2,<2.10.0)",
    "pydantic-settings (>=2.5.2,<2.6.0)",
    "httpx (>=0.27.0,<0.28.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "asgiref (>=3.8.1,<3.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
testcontainers = "^4.12.0"
ruff = "^0.12.7"
pre-commit = "^4.2.0"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.flake8-builtins]
builtins-allowed-modules = ["id"]

[tool.ruff.lint.flake8-copyright]
author = "Ruff"
